# Udp-Drone

./: CMakeLists.txt  LICENSE  README.md
accel_gyro/: CMakeLists.txt  gyro_original.c
bms/: CMakeLists.txt  bms.c
drone_tcp/: CMakeLists.txt  auxiliary_funcs.c  auxiliary_funcs.h  drone_tcp.c  drone_udp.c  gyro.c  gyro.h
pwm/: pwm_led_fade.c
tcp_server/: CMakeLists.txt
udp/: CMakeLists.txt  drone_udp.c
udp_basic/: CMakeLists.txt  drone_udp.c
